# substreams-solana-idls

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  darklake_idl.json  lifinity_idl.json
.agents/skills/: README.md  add-protocol.md  build-and-test.md  pr-workflow.md
.github/ISSUE_TEMPLATE/: dex_integration_request.yaml
.github/workflows/: ci.yml  publish.yml  push.yml
docs/: metaplex.md  repo-navigation.md
src/: accounts.rs  lib.rs  pubkey.rs
src/aldrin/: instructions.rs
src/bonkswap/: accounts.rs  anchor_self_cpi.rs  decoder_reference.rs  idl.json  instructions.rs  logs.rs  mod.rs
src/boop/: accounts.rs  events.rs  instructions.rs
src/byreal/: mod.rs
src/common/: accounts.rs  mod.rs
src/darklake/: accounts.rs  events.rs  instructions.rs
src/dumpfun/: events.rs  instructions.rs  mod.rs
src/goonfi/: instructions.rs  mod.rs
src/heaven/: instructions.rs  logs.rs  mod.rs
src/humidifi/: instructions.rs  mod.rs
src/jupiter/: README.md  mod.rs
src/lifinity/: accounts.rs  instructions.rs  mod.rs
src/magiceden/: mod.rs
src/marinade/: accounts.rs  events.rs  instructions.rs  mod.rs
src/metaplex/: mod.rs
src/meteora/: README.md  mod.rs
src/moonshot/: events.rs  instructions.rs  mod.rs
src/openbook/: accounts.rs  events.rs  instructions.rs  mod.rs
src/orca/: README.md  mod.rs
src/pancakeswap/: accounts.rs  events.rs  instructions.rs  mod.rs
src/penguin/: accounts.rs  instructions.rs  mod.rs
src/phoenix/: README.md  accounts.rs  events.rs  idl.json  instructions.rs  mod.rs
src/phonenix/: accounts.rs  events.rs  instructions.rs  mod.rs
src/plasma/: accounts.rs  instructions.rs  mod.rs
src/pumpfun/: README.md  events.rs  instructions.rs  logs.rs  mod.rs  pubkey.rs
src/pumpswap/: accounts.rs  events.rs  instructions.rs  mod.rs
src/raydium/: README.md  mod.rs
src/sanctum/: instructions.rs  mod.rs
src/saros/: README.md  accounts.rs  instructions.rs  mod.rs
src/serum/: accounts.rs  instructions.rs  mod.rs
src/stabble/: README.md  accounts.rs  events.rs  idl.json  instructions.rs  mod.rs
src/tensor/: events.rs  instructions.rs  mod.rs
src/tesserav/: instructions.rs
tests/: aldrin.rs  bonkswap.rs  boop.rs  byreal.rs  common.rs  cpmm.rs  dflow.rs  discriminators.js  drift.rs  dumpfun.rs  goonfi.rs  heaven.rs  humidifi.rs  jupiter.js  jupiter.rs  jupiter_v4.rs  jupiter_v6.rs  lifinity.rs  magiceden.rs  marinade.rs  metaplex.rs  meteora.rs  meteora_daam.rs  meteora_dllm.rs  moonshot.rs  native.rs  obric.rs  okx.rs  openbook.rs  orca.rs  pancakeswap.rs  penguin.rs  phoenix.rs  plasma.rs  pumpfun.js  pumpfun.rs  pumpfun_amm.rs  pumpswap.rs  raydium.rs  raydium_amm_v4.rs  (+12 more)
tests/aldrin/: instructions.rs
tests/bonkswap/: bonkswap.rs  instructions.rs
tests/boop/: instructions.rs
tests/byreal/: byreal_clmm.rs  instructions.rs
tests/dflow/: dflow_v4.rs  instructions.rs
tests/drift/: drift_v2.rs  instructions.rs
tests/dumpfun/: instructions.rs
tests/goonfi/: instructions.rs
tests/heaven/: heaven.rs  instructions.rs
tests/humidifi/: humidifi.rs  instructions.rs
tests/jupiter/: events.rs  instructions.rs  jupiter_v4.rs  jupiter_v6.rs
tests/lifinity/: instructions.rs
tests/magiceden/: instructions.rs
tests/marinade/: events.rs  instructions.rs
tests/metaplex/: accounts.rs  fixtures.rs  instructions.rs
tests/meteora/: instructions.rs  meteora_daam.rs  meteora_dllm.rs  meteora_dlmm.rs
tests/moonshot/: instructions.rs
tests/native/: instructions.rs
tests/obric/: instructions.rs
tests/okx/: instructions.rs  okx_v2.rs
tests/openbook/: instructions.rs
tests/orca/: instructions.rs
tests/pancakeswap/: instructions.rs  pancakeswap.rs
tests/penguin/: instructions.rs  penguin.rs
tests/phoenix/: instructions.rs
tests/plasma/: instructions.rs
tests/pumpfun/: amm.rs  events.rs  instructions.rs  pumpfun.rs  pumpfun_amm.rs
tests/pumpswap/: accounts.rs  events.rs  instructions.rs
tests/raydium/: events.rs  instructions.rs  raydium_amm_v4.rs  raydium_cpmm.rs  raydium_launchpad.rs
tests/sanctum/: instructions.rs
tests/saros/: instructions.rs  saros.rs
tests/serum/: instructions.rs
tests/solfi/: instructions.rs  solfi_v1.rs  solfi_v2.rs
tests/spl/: instructions.rs
tests/stabble/: instructions.rs
tests/tensor/: instructions.rs
(+137 files in other folders)
