[package]
name = "substreams-solana-idls"
version = "0.7.0"
edition = "2021"

[dependencies]
substreams = "0.6.2"
substreams-solana = "0.14.1"
solana-program = "2.3.0"
borsh = { version = "1.5.7", features = ["derive"] }
thiserror = "2.0.16"
base64 = "0.22.1"
sha2 = "0.10.8"

[dev-dependencies]
hex-literal = "0.4.1"
