[package]
name = "substreams-solana-idls"
version = "1.0.0"
edition = "2021"
description = "Type-safe Solana instruction, event & account decoders for Substreams"
license = "MIT"
repository = "https://github.com/pinax-network/substreams-solana-idls"
documentation = "https://docs.rs/substreams-solana-idls"

[dependencies]
substreams = "0.6.2"
substreams-solana = "0.14.1"
solana-program = "2.3.0"
borsh = { version = "1.5.7", features = ["derive"] }
thiserror = "2.0.16"
base64 = "0.22.1"
sha2 = "0.10.8"
mpl-token-metadata = "5.1.1"

[dev-dependencies]
hex-literal = "0.4.1"
